Fix menu alignment on mobile

--- a/web/src/components/Common/Popover/PopoverContent.scss
+++ b/web/src/components/Common/Popover/PopoverContent.scss
@@ -37,19 +37,66 @@
   }
 }
 
+/* alignment */
 .left-align {
   left: 0;
+  right: auto;
+  top: auto;
+  bottom: auto;
 }
 .right-align {
   right: 0;
+  left: auto;
+  top: auto;
+  bottom: auto;
 }
 .top-align {
   top: 0;
+  left: auto;
+  right: auto;
+  bottom: auto;
 }
 .bottom-align {
   bottom: 0;
+  left: auto;
+  right: auto;
+  top: auto;
+}
+// md
+.left-align-md {
+  @include breakpoint(md) {
+    left: 0;
+    right: auto;
+    top: auto;
+    bottom: auto;
+  }
+}
+.right-align-md {
+  @include breakpoint(md) {
+    right: 0;
+    left: auto;
+    top: auto;
+    bottom: auto;
+  }
+}
+.top-align-md {
+  @include breakpoint(md) {
+    top: 0;
+    left: auto;
+    right: auto;
+    bottom: auto;
+  }
+}
+.bottom-align-md {
+  @include breakpoint(md) {
+    bottom: 0;
+    left: auto;
+    right: auto;
+    top: auto;
+  }
 }
 
+/* direction */
 .top-direction {
   bottom: calc(100% + 4px);
 }
